--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -75,7 +75,7 @@
                       item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
                       item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado )"
                     data-toggle="modal" data-target="#t_and_c_m" >
-                    <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar Oficio" >assignment_ind</i>
+                    <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar" >assignment_ind</i>
                   </a> </td>
             </tr>
         </tbody>
