--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -64,13 +64,14 @@
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
               <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
               <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td>
-              <td> <a *ngIf="item.idEstado.idEstado == 3 && item.idTipoDocumento.idTipoDocumento == 1"
+              <td> <a *ngIf="item.idEstado.idEstado == 3 && item.idTipoDocumento.idTipoDocumento == 1 && item.idTipoComunicacion.idTipoComunicacion == 1"
                     href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
                                                          item.idDeptoFuncional.idDeptoFuncional,
                                                          item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
                                                          item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento);"
+                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
                      data-toggle="modal" data-target="#t_and_c_m2" >
                      <i class="material-icons" data-placement="top" title="Oficio Respuesta">create_new_folder</i>
                   </a>
@@ -79,8 +80,9 @@
                                                          item.idDeptoFuncional.idDeptoFuncional,
                                                          item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
                                                          item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento);"
+                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m3" >
                           <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Agregar Actividad a Comunicacion" >assignment</i>
                   </a>
@@ -88,8 +90,9 @@
                                                          item.idDeptoFuncional.idDeptoFuncional,
                                                          item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
                                                          item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc );
-                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento);"
+                                                         item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado, item.idCorrespondenciaEnc,
+                                                         item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion );
+                                                         listarCodigoCorrespondenciaAgregarActividad(item.idTipoDocumento.idTipoDocumento, item.idTipoComunicacion.idTipoComunicacion);"
                           data-toggle="modal" data-target="#t_and_c_m" >
                       <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Finalizar Oficio" >assignment_turned_in</i>
                   </a>
