--- a/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
+++ b/symfony/app/Resources/views/Emails/sendMailFuncionario.html.twig
@@ -6,24 +6,62 @@
 </head>
 <body>
     <div class="container">
-        <div class="jumbotron">    
-  
+        <div class="jumbotron">
             <h1 class="display-3">Estimado(a): </h1>
-            <h2 class="display-3"> {{ name }}  {{ apellidoOficio }} </h2>
-            <p class="lead">Se le notifica la Asignación de un Oficio con la siguiente informacion: </p>
+            <h2 class="display-3">{{ name }}  {{ apellidoOficio }} </h2>
+            <p class="lead">Se ha ingresado una Comunicacion, con la siguiente informacion: </p>
             <hr class="my-4">
-            <ul>
-                <li> Numero de Oficio Externo: {{ oficioExtNo }} </li>
-                <li> Numero de Oficio Interno: {{ oficioInNo }} </li>
-                <li> Tema: {{ temaOficio }} </li>
-                <li> Contenido: {{ descOficio }} </li>
-                <li> Fecha Entrega: {{ fechaMaxOfi }} </li>
-                <li> Fecha Creacion:{{ fechaIngresoOfi }} </li>                
-            </ul>
-            
+            <br>
+            <table class="tabla" border="0" cellpadding="0" cellspacing="0">
+                
+                  <tr>
+                    <th>
+                      <th colspan="3">Informacion de la Comunicacion</th>
+                    </th>
+                  </tr>
+                  <tr>
+                    <th>#</th>
+                    <th>Item</th>
+                    <th>Descripcion</th>                    
+                  </tr>                
+                
+                  <tr class="modo1">
+                    <th scope="row">1</th>
+                    <td>Codigo Externo</td>
+                    <td>{{ oficioExtNo }}</td>                    
+                  </tr>
+                  <tr class="modo1">
+                    <th scope="row">2</th>
+                    <td>Codigo Interno</td>
+                    <td>{{ oficioInNo }}</td>                    
+                  </tr>
+                  <tr class="modo1">
+                    <th scope="row">3</th>
+                    <td>Tema</td>
+                    <td>{{ temaOficio }}</td>                    
+                  </tr>
+                  <tr class="modo1">
+                    <th scope="row">4</th>
+                    <td>Contenido</td>
+                    <td>{{ descOficio }}</td>                    
+                  </tr>
+                  <tr class="modo1">
+                    <th scope="row">5</th>
+                    <td>Fecha Entrega</td>
+                    <td>{{ fechaIngresoOfi }}</td>                    
+                  </tr>
+                  <tr class="modo1">
+                    <th scope="row">6</th>
+                    <td>Fecha Creacion</td>
+                    <td>{{ fechaMaxOfi }}</td>                    
+                  </tr>
+                
+            </table>
+
+            <br>
             <h4> Saludos cordiales </h4>
-            <img src="{{ asset('src/images.jpg') }}" alt="SRECI" style="width:50px" />  
-            
+
+            <img src="secretaria_exterior.png" alt="SRECI" height="142" width="142">
         </div>
     </div>
 </body>
